// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button unit tests Renders with color primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
}

.emotion-0:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(126, 34, 206, var(--tw-bg-opacity));
}

<button
    class="emotion-0"
    color="primary"
  >
    My Button
  </button>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgba(209, 213, 219, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(88, 28, 135, var(--tw-bg-opacity));
}

.emotion-0:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(126, 34, 206, var(--tw-bg-opacity));
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(88, 28, 135, var(--tw-bg-opacity));
}

<button
    class="emotion-0"
    color="primary"
    disabled=""
  >
    My disabled Button
  </button>
</DocumentFragment>
`;

exports[`Button unit tests Renders with color secondary 1`] = `
<DocumentFragment>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(234, 179, 8, var(--tw-bg-opacity));
}

.emotion-0:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(202, 138, 4, var(--tw-bg-opacity));
}

<button
    class="emotion-0"
    color="secondary"
  >
    My Button
  </button>
  .emotion-0 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(234, 179, 8, var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgba(209, 213, 219, var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(133, 77, 14, var(--tw-bg-opacity));
}

.emotion-0:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(202, 138, 4, var(--tw-bg-opacity));
}

.emotion-0:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(133, 77, 14, var(--tw-bg-opacity));
}

<button
    class="emotion-0"
    color="secondary"
    disabled=""
  >
    My disabled Button
  </button>
</DocumentFragment>
`;
